tests/snapshots/examples_fixtures/type_system__failing__40_effect_alias_print_in_time_function.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/40_effect_alias_print_in_time_function.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/type_system/failing/40_effect_alias_print_in_time_function.flx:4:13
  |
4 |     let p = print
  |             ^^^^^

Hint:
  Define it first: let print = ...;

Help:
  Did you mean `p`?
== stdout ==
<not executed>
